# druid

./: .clang-format  .clang-tidy  .clangd  .codecov.yml  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  codecov.yml  vcpkg.json
.github/workflows/: build.yml  clang-format.yml  deploy-doxygen.yml  doxydocs.yml  lint.yml  linux.yml  osx.yml  static.yml  windows.yml
adr/: 0000_template.md  0001_core_architecture_ecs.md
app/: CMakeLists.txt
app/briarthorn/: CMakeLists.txt  Test.ixx  main.cpp
app/pong/: CMakeLists.txt  main.cpp
app/runestone/: CMakeLists.txt  ChessBoard.h  ChessBoard.ixx  Types.h
app/runestone-gui/: CMakeLists.txt  main.cpp
app/runestone-gui/src/ui/: BoardRenderer.ixx  CMakeLists.txt  Square.ixx
app/runestone/src/: BitBoard.h  CMakeLists.txt  ChessBoard.ixx  ChessPiece.ixx  EnumMask.h  Move.ixx  PieceFactory.ixx  Position.cpp  Position.h  Position.ixx  Types.h  Utils.h  Utils.ixx
app/runestone/src/test/: BitBoard.test.cpp  CMakeLists.txt  EnumMask.test.cpp  Position.test.cpp  Utils.test.cpp
app/runestone/test/: CMakeLists.txt  ChessBoard.test.cpp  ChessPiece.test.cpp  Move.test.cpp  PieceFactory.test.cpp
cmake/: project_add_executable.cmake  project_add_library.cmake  project_compile_options.cmake
cmake/preset/: config-code-coverage.json  config-llvm-cov.json  host-x64-osx.json  platform-android.json  platform-emscripten.json  platform-linux.json  platform-osx.json  platform-windows.json  target-x64-osx.json  use-msvc.json  use-visualstudio.json
cmake/triplets/: x64-osx-druid.cmake  x64-windows-druid.cmake
docs/doxygen/: .doxyfile
include/core/: Entity.h  Signal.h
include/druid/anchor/: Components.h  Module.h
include/druid/core/: Concepts.h  Engine.h  EnumMask.h  Event.h  File.h  Object.h  Signal.h
include/druid/entity/: Entity.h  World.h
include/druid/graphics/: Color.h  Node.h  NodeRectangle.h  NodeText.h  Renderer.h  Window.h
include/druid/graphics/renderer/: Raylib.h
include/druid/raylib/: Drawable.h  Module.h  Window.h
include/druid/scene/: Heirarchy.h  Material.h  Mesh.h  Node.h  Transform.h  Tree.h
src/: CMakeLists.txt
src/anchor/: CMakeLists.txt  Module.cpp
src/core/: CMakeLists.txt  CommandLineParser.ixx  Components.ixx  Concepts.ixx  Engine.cpp  Engine.ixx  Entity.ixx  EnumMask.ixx  Event.ixx  File.cpp  File.ixx  NotNull.ixx  Object.cpp  Object.ixx  Signal.ixx
src/core/test/: CMakeLists.txt  CommandLineParser.test.cpp  Engine.test.cpp  Entity.test.cpp  EnumMask.test.cpp  Object.test.cpp  Signal.test.cpp  main.cpp
src/entity/: CMakeLists.txt  Entity.cpp  Entity.ixx  World.ixx
src/entity/test/: CMakeLists.txt  World.test.cpp
src/graphics/: CMakeLists.txt  Color.cpp  Color.ixx  Event.ixx  Node.cpp  Node.ixx  NodeRectangle.ixx  NodeText.ixx  Pipeline.ixx  Renderer.ixx  Window.cpp  Window.ixx
src/graphics/renderer/: Raylib.ixx
src/graphics/test/: CMakeLists.txt  Node.test.cpp  NodeRectangle.test.cpp  main.cpp
src/math/: CMakeLists.txt  Mat4.ixx  Vec2.ixx  Vec3.ixx
src/raylib/: CMakeLists.txt  Drawable.cpp  Drawable.ixx  Module.cpp  Module.ixx  Rectangle.ixx  Renderer.ixx  Window.ixx
src/scene/: CMakeLists.txt  Node.cpp  Tree.cpp
src/scene/test/: CMakeLists.txt  Tree.test.cpp
